--- a/File Converter/View/MainForm.resx
+++ b/File Converter/View/MainForm.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="settingsToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>835, 9</value>
+    <value>1152, 23</value>
   </metadata>
   <metadata name="drawerImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -127,9 +127,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACM
-        CQAAAk1TRnQBSQFMAgEBAwEAATABAgEwAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAk
+        CgAAAk1TRnQBSQFMAgEBBAEAAVABAgFQAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -156,19 +156,22 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0QAAfMJ8gH/BQAB8wny
-        Af8IAAHzAm0B7BgAAZIKAAEOAf8DAAGSCgABDgH/BwABBwIAAQ4YAAFtCwAB8gMAAW0B7QoAAfIEAAFt
-        AfAB/wEQAwAB7wH/ARMB/xQAAW0CAAbwAe0CAAHyAwABbQHtCgAB8gMAAfIKAAEUAf8TAAFtAgAG8gHv
-        AgAB8gMAAW0B7QMAAe8GAAHyAwABFQMAAQ4BBwHxAesEAAHyEwABbQsAAfIDAAFtAe0EAAESBQAB8gMA
-        AfIBDgIAAfMCAAH/AW0CAAFtAf8TAAFtCAAB8AIAAfIDAAFtAe0FAAEOAf8DAAHyBAAB7AEAAREEAAHw
-        FwABbQIABu0BbQIAAfIDAAFtAe0FAAHyBAAB8gMAAf8BbQEAAQ4B/wMAAfcCAAHzFAABbQIABG0BEgQA
-        AfQDAAFtAe0DAAFDAf8FAAHyAwABEwMAAW0B/wEAAfEEAAHyEwABbQYAAfIDAAEHBAABbQHtAwAB/wYA
-        AfIDAAHvBQABDwQAAQ4B/xMAAW0JAAEHBQABbQHtCgAB8gQAAQ8BAAFtBQABEwEAAQcUAAHsCAABBwYA
-        AewBFQntAQAB8wcAAe8bAAH0AewFbQHrAfEHAAH0AewJbQEHCAAB8AIAARE8AAT/VgABQgFNAT4HAAE+
-        AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABv8CAAHgAQMB4AEDAfwBPwIAAcABAQHAAQEB/AE/
-        AgABwAEBAc8B+QHgAQMCAAHAAQEBzwH5AcABAQIAAcABAQHOAfkBwAEBAgABwAEBAc4BeQHBAYECAAHH
-        AeEBzgEZAeMBxwIAAcABAQHOATkBwQHDAgABwAEBAc4BeQHAAYECAAHHAYMBzgH5AcABAQIAAcABBwHP
-        AfkB4AEDAgABwAEPAcABAQH8AT8CAAHAAR8BwAEDAfwBPwIABP8B/AE/AgAG/wIACw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ANgAB9Azy
+        AfMB/wMAAfMJ8gH/BQAB8wnyAf8IAAHzAm0B7AcAAQ4NAAHzAgABkgoAAQ4B/wMAAZIKAAEOAf8HAAEH
+        AgABDhUAAfICAAFtCwAB8gMAAW0B7QoAAfIEAAFtAfAB/wEQAwAB7wH/ARMB/xEAAfICAAFtAgAG8AHt
+        AgAB8gMAAW0B7QoAAfIDAAHyCgABFAH/BAAB7AgAAf8CAAHyAgABbQIABvIB7wIAAfIDAAFtAe0DAAHv
+        BgAB8gMAARUDAAEOAQcB8QHrBAAB8gUAAbwCAAGSBAABDwIAAfICAAFtCwAB8gMAAW0B7QQAARIFAAHy
+        AwAB8gEOAgAB8wIAAf8BbQIAAW0B/wYAAfQB7wEAAewCAAHsAwAB8gIAAW0IAAHwAgAB8gMAAW0B7QUA
+        AQ4B/wMAAfIEAAHsAQABEQQAAfAOAAHyAfAEAAHyAgABbQIABu0BbQIAAfIDAAFtAe0FAAHyBAAB8gMA
+        Af8BbQEAAQ4B/wMAAfcCAAHzEQAB8gIAAW0CAARtARIEAAH0AwABbQHtAwABQwH/BQAB8gMAARMDAAFt
+        Af8BAAHxBAAB8hAAAfICAAFtBgAB8gMAAQcEAAFtAe0DAAH/BgAB8gMAAe8FAAEPBAABDgH/EAAB8gIA
+        AW0JAAEHBQABbQHtCgAB8gQAAQ8BAAFtBQABEwEAAQcRAAHyAgAB7AgAAQcGAAHsARUJ7QEAAfMHAAHv
+        GAAB8gIAAfQB7AVtAesB8QcAAfQB7AltAQcIAAHwAgABERUAAfImAAT/BwAB7wwAAUMB/0AAAUIBTQE+
+        BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAb/AYABAAHgAQMB4AEDAfwBPwGAAQABwAEB
+        AcABAQH8AT8BgAEAAcABAQHPAfkB4AEDAYABAAHAAQEBzwH5AcABAQGPAfABwAEBAc4B+QHAAQEBhgHw
+        AcABAQHOAXkBwQGBAYABYAHHAeEBzgEZAeMBxwGAAQABwAEBAc4BOQHBAcMBgAEAAcABAQHOAXkBwAGB
+        AYABAAHHAYMBzgH5AcABAQGAAQABwAEHAc8B+QHgAQMBgAEAAcABDwHAAQEB/AE/AYABAAHAAR8BwAED
+        AfwBPwGAAQAE/wH8AT8BgAEACP8L
 </value>
   </data>
   <metadata name="fileOpenDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -179,5 +182,8 @@
   </metadata>
   <metadata name="textFileConversionBackgroundWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>527, 17</value>
+  </metadata>
+  <metadata name="imageFileConversionBackgroundWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>832, 21</value>
   </metadata>
 </root>
